Updated to capacitor v7

--- a/frontend/app/mobile/ios/App/Podfile
+++ b/frontend/app/mobile/ios/App/Podfile
@@ -1,6 +1,6 @@
 require_relative '../../../../../node_modules/@capacitor/ios/scripts/pods_helpers'
 
-platform :ios, '13.0'
+platform :ios, '14.0'
 use_frameworks!
 
 # workaround to avoid Xcode caching of Pods that requires
@@ -12,6 +12,7 @@ def capacitor_pods
   pod 'Capacitor', :path => '../../../../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../../../../node_modules/@capacitor/ios'
   pod 'CapacitorCommunityHttp', :path => '../../../../../node_modules/@capacitor-community/http'
+  pod 'CapacitorCommunityInAppReview', :path => '../../../../../node_modules/@capacitor-community/in-app-review'
   pod 'CapacitorApp', :path => '../../../../../node_modules/@capacitor/app'
   pod 'CapacitorAppLauncher', :path => '../../../../../node_modules/@capacitor/app-launcher'
   pod 'CapacitorFilesystem', :path => '../../../../../node_modules/@capacitor/filesystem'
@@ -21,7 +22,6 @@ def capacitor_pods
   pod 'CapacitorShare', :path => '../../../../../node_modules/@capacitor/share'
   pod 'CapacitorStatusBar', :path => '../../../../../node_modules/@capacitor/status-bar'
   pod 'CapgoCapacitorUpdater', :path => '../../../../../node_modules/@capgo/capacitor-updater'
-  pod 'CapacitorRateApp', :path => '../../../../../node_modules/capacitor-rate-app'
 end
 
 target 'App' do
