--- a/frontend/app/mobile/ios/App/App/capacitor.config.json
+++ b/frontend/app/mobile/ios/App/App/capacitor.config.json
@@ -24,6 +24,7 @@
 	},
 	"packageClassList": [
 		"HttpPlugin",
+		"InAppReviewPlugin",
 		"AppPlugin",
 		"AppLauncherPlugin",
 		"FilesystemPlugin",
@@ -32,7 +33,6 @@
 		"PreferencesPlugin",
 		"SharePlugin",
 		"StatusBarPlugin",
-		"CapacitorUpdaterPlugin",
-		"CapacitorRateAppPlugin"
+		"CapacitorUpdaterPlugin"
 	]
 }
